# ci-pipeline

./: .gitignore  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  up-to-date-main.yml
tests/: test_app.py
