[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ci_pipeline"
version = "0.1.0"
description = "Projeto exemplo para CI com lint, testes e build"
requires-python = ">=3.9"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"